--- a/style.css
+++ b/style.css
@@ -24,37 +24,64 @@ body {
     height: 100vh;
 }
 .navbar {
-    width: 20%;
+    width: 30%;
     height: 100%;
     padding: 15px;
+    border-right: solid 1px lightgray;
 }
 .document {
-    width: 80%;
+    width: 70%;
     height: 100%;
     padding: 15px;
+    padding-left: 40px
 }
 .navbar .top {
     height: 10%;
     padding: 10px;
+    border-bottom: solid 1px lightgray;
 }
 .navbar .content {
-    height: 60%;
+    height: 80%;
     padding: 10px;
+    overflow-y: scroll;
+    border-bottom: solid 1px lightgray;
+}
+.navbar .content::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
 .navbar .bottom {
-    height: 30%;
+    height: 10%;
     padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
 .navbar .todo {
-    height: 50px;
-    margin-bottom: 10px;
+    height: 40px;
+    margin-bottom: 0px;
     padding: 10px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
+    
+    
 }
+
+.input {
+  outline: none;
+  height: 30px;
+  width: 90%;
+  border: none;
+}
+
+.inputdiv {
+  height: 40px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  justify-content: space-between;
+  border: solid 1px gray;
+}
+
 .navbar .todo .circle {
     width: 30px;
     height: 30px;
@@ -64,9 +91,10 @@ body {
 }
 .navbar .todo .name {
     width: calc(100% - 30px);
-    height: 30px;
+
     margin: 0;
     padding-left: 10px;
+    font-size: 13px;
 }
 .navbar .todo .circle .innercircle {
     width: 27px;
@@ -103,7 +131,6 @@ body {
     padding-left: 13px;
     border: rgb(213, 218, 222) solid 1px;
     margin-right: 10px;
-    border-radius: 10px;
     
 }
 
@@ -142,4 +169,101 @@ body {
     background-color: rgb(239, 83, 83);
     color: white;
     outline: none;
+}
+
+.recents {
+    height: 60px;
+    padding: 5px;
+    padding-left: 0;
+    display: flex;
+}
+/*
+https://dribbble.com/shots/22395153-Document-Home
+*/
+.recents .option {
+    height: 50px;
+    display: flex;
+    margin-right: 5px;
+    border: solid 1px lightgray;
+}
+
+.recents .option .logo {
+    width: 35px;
+    height: 35px;
+    margin: 5px;
+    
+    background-position: center;
+    background-size: cover;
+    background-image: url(google-docs.png);
+
+}
+
+.recents .option .right {
+    width: calc(100% - 40px);
+    padding: 5px;
+}
+.recents .option .right .name {
+    margin: 0;
+}
+
+.recents .option .right .info {
+    font-size: 12px;
+    margin-top: 2px
+}
+
+.allfiles {
+    width: 80%;
+    border: solid 1px lightgray;
+}
+
+
+
+.allfiles .row {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 40px;
+    padding: 10px;
+    font-size: 14px;
+}
+
+.allfiles .nowmalrow:hover {
+    background-color: rgb(242, 242, 242);
+}
+
+.allfiles .init {
+    background-color: rgb(0, 0, 0);
+    color: white;
+}
+
+.allfiles .rowitem {
+    width: 25%;
+ 
+    
+}
+
+
+
+
+.navlogo {
+    width: 60px; height: 60px;
+    margin-left: -10px;
+    margin-top: -10px;
+
+    background-image: url(logo.png);
+    background-position: center;
+    background-size: cover;
+}
+
+@keyframes finishedTodo {
+    from {
+        color: black;
+     
+    }
+
+    to {
+        color: white;
+        margin-left: -400px;
+        
+    }
 }
